# Whisp

./: .gitignore  README.md
.github/workflows/: release.yml
go-android/: go.mod  go.sum  patch_singbox.py  singbox.go  tun2socks.go
go-android/cmd/patch/: main.go
src/: main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/android-patch/: apply.sh  singbox.gradle
src-tauri/android-patch/java/com/whispera/whisp/: MainActivity.kt  WhispVpnNative.kt  WhispVpnPrep.kt  WhispVpnService.kt
src-tauri/android-patch/manifest/: manifest-additions.xml
src-tauri/android-patch/res/xml/: network_security_config.xml
src-tauri/crates/whisp-vpn-android/: Cargo.toml  README.md
src-tauri/crates/whisp-vpn-android/src/: go_client_runner.rs  jni_glue.rs  lib.rs  mihomo_runner.rs  pkg_list.rs  rules.rs  service_intent.rs
src-tauri/src/: go_client.rs  lib.rs  main.rs  mihomo.rs  ml_server.rs
